<resources>
    <string name="app_name">PoeTradeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchButtonText">Search</string>
    <string name="logo_image_description">Logo image</string>
    <string name="filterMinTextFieldHint">MIN</string>
    <string name="filterMaxTextFieldHint">MAX</string>
    <string name="side_menu">Side Menu</string>
    <string name="accept">Accept</string>
    <string name="search">Search</string>
    <string name="cards_group_search_hint">Enter card name…</string>
    <string name="maps_group_search_hint">Enter map name…</string>
    <string name="title_activity_item_search">ItemSearchActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="socket_filter_sockets_header">Sockets</string>
    <string name="socket_filter_red_socket">R</string>
    <string name="socket_filter_green_socket">G</string>
    <string name="socket_filter_blue_socket">B</string>
    <string name="socket_filter_white_socket">W</string>
    <string name="min_hint">MIN</string>
    <string name="max_hint">MAX</string>
    <string name="socket_filter_links_header">Links</string>
    <string name="empty_hint">" "</string>
    <string name="stock_text">"Stock: %d"</string>
    <string name="exchange_text">"You will get  x %d ⇐ %d x  You will pay"</string>
    <string name="account_text">"%s (%s)"</string>
    <string name="main_search_items_button">Search items</string>
    <string name="main_exchange_currency_button">Exchange currency</string>
    <string name="preload_fragmet_loading_text">Loading…</string>
    <string name="trade_filters_seller_account_text">Seller Account</string>
    <string name="account_name_hint">Enter account name…</string>
    <string name="trade_filters_listed_text">Listed</string>
    <string name="trade_filters_sale_type_text">Sale Type</string>
    <string name="trade_filters_buyout_price_text">Buyout Price</string>
    <string name="type_filters_item_category_text">Item Category</string>
    <string name="type_filters_item_rarity_text">Item Rarity</string>
    <string name="toolbar_search_item_hint">Search item</string>
    <string name="clear_filter_description">clearFilter</string>
    <string name="socket_filter_header">Socket Filters</string>
    <string name="trade_filter_header">Trade Filters</string>
    <string name="type_filter_header">Type Filters</string>
    <string name="items_search_title">Selected item: %s</string>
</resources>
