<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/items_background"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:id="@+id/toolbar_search_layout"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/toolbar_search_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/back_24" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/empty_hint"
                    app:endIconMode="clear_text"
                    app:endIconTint="#999999"
                    app:hintTextColor="@android:color/transparent">

                    <AutoCompleteTextView
                        android:id="@+id/toolbar_search_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#1e2124"
                        android:backgroundTint="@android:color/transparent"
                        android:completionThreshold="0"
                        android:dropDownWidth="match_parent"
                        android:fontFamily="@font/fontinsmallcaps"
                        android:gravity="center_vertical"
                        android:hint="@string/toolbar_search_item_hint"
                        android:inputType="textNoSuggestions"
                        android:paddingVertical="0dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="#999999"
                        android:textCursorDrawable="@color/default_text_color"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/items_toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:menu="@menu/menu_items"
                app:navigationIcon="@drawable/menu_24"
                app:title="@string/items_search_title"
                app:titleTextAppearance="@style/TitleFontStyle" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/itemExchangeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>