<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnWeight="1"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/filter_textfield_default"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/trade_filters_seller_account_text"
                android:textColor="@color/default_text_color"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/empty_hint"
                app:hintTextColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trade_filters_sellerAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E2124"
                    android:fontFamily="@font/fontinsmallcaps"
                    android:gravity="center|center_vertical"
                    android:hint="@string/account_name_hint"
                    android:inputType="textNoSuggestions"
                    android:padding="0dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/filter_textfield_default"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/trade_filters_listed_text"
                android:textColor="@color/default_text_color"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/empty_hint"
                app:endIconTint="#999999"
                app:hintTextColor="@android:color/transparent">

                <AutoCompleteTextView
                    android:id="@+id/trade_filters_listed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E2124"
                    android:fontFamily="@font/fontinsmallcaps"
                    android:gravity="center|center_vertical"
                    android:inputType="textNoSuggestions"
                    android:padding="0dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/filter_textfield_default"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/trade_filters_sale_type_text"
                android:textColor="@color/default_text_color"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/empty_hint"
                app:endIconTint="#999999"
                app:hintTextColor="@android:color/transparent">

                <AutoCompleteTextView
                    android:id="@+id/trade_filters_saleType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E2124"
                    android:fontFamily="@font/fontinsmallcaps"
                    android:gravity="center|center_vertical"
                    android:inputType="textNoSuggestions"
                    android:padding="0dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/filter_textfield_default"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/trade_filters_buyout_price_text"
                android:textColor="@color/default_text_color"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="3"
                android:hint="@string/empty_hint"
                app:endIconTint="#999999"
                app:hintTextColor="@android:color/transparent">

                <AutoCompleteTextView
                    android:id="@+id/trade_filters_buyoutPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E2124"
                    android:fontFamily="@font/fontinsmallcaps"
                    android:gravity="center|center_vertical"
                    android:inputType="textNoSuggestions"
                    android:padding="0dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:hint="@string/empty_hint"
                app:hintTextColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trade_filters_buyoutPriceMin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E2124"
                    android:fontFamily="@font/fontinsmallcaps"
                    android:gravity="center|center_vertical"
                    android:hint="@string/min_hint"
                    android:inputType="textNoSuggestions"
                    android:padding="0dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/empty_hint"
                app:hintTextColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trade_filters_buyoutPriceMax"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E2124"
                    android:fontFamily="@font/fontinsmallcaps"
                    android:gravity="center|center_vertical"
                    android:hint="@string/max_hint"
                    android:inputType="textNoSuggestions"
                    android:padding="0dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#999999"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>