<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filterName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/filter_textfield_default"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="@color/default_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,SelectableText" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropDownLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:textColorHint="#999999"
        android:visibility="gone"
        app:endIconTint="#999999"
        app:hintTextColor="@android:color/transparent">

        <AutoCompleteTextView
            android:id="@+id/filterDropDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1E2124"
            android:dropDownWidth="match_parent"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center_vertical|center"
            android:inputType="textNoSuggestions"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:id="@+id/minMaxLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:columnCount="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_marginEnd="1dp"
            android:hint="@string/empty_hint"
            app:hintTextColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterMin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1E2124"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center|center_vertical"
                android:hint="@string/filterMinTextFieldHint"
                android:inputType="textNoSuggestions"
                android:padding="0dp"
                android:textColor="@android:color/white"
                android:textColorHint="#999999"
                android:textSize="13sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_marginStart="1dp"
            android:hint="@string/empty_hint"
            app:hintTextColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterMax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1E2124"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center|center_vertical"
                android:hint="@string/filterMaxTextFieldHint"
                android:inputType="textNoSuggestions"
                android:padding="0dp"
                android:textColor="@android:color/white"
                android:textColorHint="#999999"
                android:textSize="13sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </GridLayout>
</LinearLayout>