<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/filterName"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/filter_textfield_default"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/default_text_color"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterValue"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:hint="@string/empty_hint"
        android:paddingEnd="1dp"
        app:endIconTint="#999999"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterMin"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterName"
        tools:ignore="RtlSymmetry">

        <AutoCompleteTextView
            android:id="@+id/filterDropDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1E2124"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:inputType="textNoSuggestions"
            android:padding="0dp"
            android:textColor="@android:color/white"
            android:textColorHint="#999999"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterMin"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="1dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterMax"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/filterValue"
        app:layout_constraintTop_toBottomOf="@id/filterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1E2124"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/min_hint"
            android:inputType="textNoSuggestions"
            android:padding="0dp"
            android:textColor="@android:color/white"
            android:textColorHint="#999999"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterMax"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:hint="@string/empty_hint"
        android:paddingStart="1dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/filterMin"
        app:layout_constraintTop_toBottomOf="@id/filterName"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1E2124"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/max_hint"
            android:inputType="textNoSuggestions"
            android:padding="0dp"
            android:textColor="@android:color/white"
            android:textColorHint="#999999"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>